--- a/solution.html
+++ b/solution.html
@@ -23,11 +23,11 @@
     </section>
     <section class="outer-section">
       <div class="content-nav">
-        <ul class="row">
-          <li class="col-md-3">运营商</li>
-          <li class="col-md-3">企业</li>
-          <li class="col-md-3">小区</li>
-          <li class="col-md-3">高校</li>
+        <ul class="row" id="tab">
+          <li class="col-md-3" id="inner0">运营商</li>
+          <li class="col-md-3" id="inner1">企业</li>
+          <li class="col-md-3" id="inner2">小区</li>
+          <li class="col-md-3" id="inner3">高校</li>
         </ul>
         <p class="content-container">Panabit专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。处理能力为600Mbps，特别适用于同时在线800人以下的普教客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功能。</p>
       </div>
@@ -71,87 +71,337 @@
         </div>
       </div>
     </section>
-    <section class="outer-section size">
+    <section class="outer-section size bottom-table">
       <h1 class="content-title">运营商版规格型号</h1>
-      <table class="table">
-        <thead>
-          <tr>
-            <td>型号</td>
-            <td>吞吐</td>
-            <td>用户规模</td>
-            <td>电口</td>
-            <td>光口</td>
-            <td>电源</td>
-            <td>产品说明</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>PA-120</td>
-            <td>80Mbps</td>
-            <td>120</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PA-300</td>
-            <td>100Mbps</td>
-            <td>300</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PA-500</td>
-            <td>120Mbps</td>
-            <td>500</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PA-1000</td>
-            <td>300Mbps</td>
-            <td>1000</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PA-1600</td>
-            <td>600Mbps</td>
-            <td>1600</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PH-3510</td>
-            <td>130Mbps</td>
-            <td>400</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PH-3580</td>
-            <td>600Mbps</td>
-            <td>800</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
-          </tr>
-        </tbody>
-      </table>
+      <table class="table" id="merchant">
+          <thead>
+            <tr>
+              <td>型号</td>
+              <td>吞吐</td>
+              <td>用户规模</td>
+              <td>电口</td>
+              <td>光口</td>
+              <td>电源</td>
+              <td>产品说明</td>
+            </tr>
+          </thead>
+          <tbody>
+            PB-8000	8Gbps	60000	3千兆电口	10千兆光口	冗余电源	PB-8000 产品说明.pdf
+            PB-12000	12Gbps	100000	3千兆电口	2千兆光口
+            2万兆光口	冗余电源	PB-12000 产品说明.pdf
+            PB-15000	4Gbps	30000	6千兆电口	2千兆光口
+            2万兆光口	冗余电源	PB-4000 产品说明.pdf
+            PB-20000	4Gbps	30000	6千兆电口	2千兆光口
+            2万兆光口	冗余电源	PB-20000 产品说明.pdf
+            <tr>
+              <td>PB-1000</td>
+              <td>1Gbps</td>
+              <td>4000</td>
+              <td>6千兆电口</td>
+              <td>6千兆光口</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-1000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-1200</td>
+              <td>1.2Gbps</td>
+              <td>6000</td>
+              <td>6千兆电口</td>
+              <td>6千兆光口</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-1200.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-2000</td>
+              <td>2Gbps</td>
+              <td>8000</td>
+              <td>6千兆电口</td>
+              <td>6千兆光口</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-2000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-3000</td>
+              <td>3Gbps</td>
+              <td>15000</td>
+              <td>6千兆电口</td>
+              <td>6千兆光口</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-3000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-4000</td>
+              <td>4Gbps</td>
+              <td>30000</td>
+              <td>6千兆电口</td>
+              <td>6千兆光口</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-4000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-6000</td>
+              <td>6Gbps</td>
+              <td>48000</td>
+              <td>3千兆电口</td>
+              <td>10千兆光口</td>
+              <td>冗余电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-6000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PB-8000</td>
+              <td>8Gbps</td>
+              <td>60000</td>
+              <td>3千兆电口</td>
+              <td>10千兆光口</td>
+              <td>冗余电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PB-8000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+          </tbody>
+        </table>
     </section>
+    <section class="outer-section size bottom-table">
+        <h1 class="content-title">企业版规格型号</h1>
+        <table class="table" id="merchant">
+            <thead>
+              <tr>
+                <td>型号</td>
+                <td>吞吐</td>
+                <td>用户规模</td>
+                <td>电口</td>
+                <td>光口</td>
+                <td>电源</td>
+                <td>产品说明</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>PA-120</td>
+                <td>80Mbps</td>
+                <td>120</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>PA-300</td>
+                <td>100Mbps</td>
+                <td>300</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>PA-500</td>
+                <td>120Mbps</td>
+                <td>500</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>PA-1000</td>
+                <td>300Mbps</td>
+                <td>1000</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>PA-1600</td>
+                <td>600Mbps</td>
+                <td>1600</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>PH-3510</td>
+                <td>130Mbps</td>
+                <td>400</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>PH-3580</td>
+                <td>600Mbps</td>
+                <td>800</td>
+                <td>6千兆电口</td>
+                <td>/</td>
+                <td>单电源</td>
+                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
+              </tr>
+            </tbody>
+          </table>
+      </section>
+      <section class="outer-section size bottom-table">
+          <h1 class="content-title">小区版规格型号</h1>
+          <table class="table" id="merchant">
+              <thead>
+                <tr>
+                  <td>型号</td>
+                  <td>吞吐</td>
+                  <td>用户规模</td>
+                  <td>电口</td>
+                  <td>光口</td>
+                  <td>电源</td>
+                  <td>产品说明</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>PA-120</td>
+                  <td>80Mbps</td>
+                  <td>120</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
+                </tr>
+                <tr>
+                  <td>PA-300</td>
+                  <td>100Mbps</td>
+                  <td>300</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
+                </tr>
+                <tr>
+                  <td>PA-500</td>
+                  <td>120Mbps</td>
+                  <td>500</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
+                </tr>
+                <tr>
+                  <td>PA-1000</td>
+                  <td>300Mbps</td>
+                  <td>1000</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
+                </tr>
+                <tr>
+                  <td>PA-1600</td>
+                  <td>600Mbps</td>
+                  <td>1600</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
+                </tr>
+                <tr>
+                  <td>PH-3510</td>
+                  <td>130Mbps</td>
+                  <td>400</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
+                </tr>
+                <tr>
+                  <td>PH-3580</td>
+                  <td>600Mbps</td>
+                  <td>800</td>
+                  <td>6千兆电口</td>
+                  <td>/</td>
+                  <td>单电源</td>
+                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
+                </tr>
+              </tbody>
+            </table>
+        </section>
+        <section class="outer-section size bottom-table">
+            <h1 class="content-title">高校版规格型号</h1>
+            <table class="table" id="merchant">
+                <thead>
+                  <tr>
+                    <td>型号</td>
+                    <td>吞吐</td>
+                    <td>用户规模</td>
+                    <td>电口</td>
+                    <td>光口</td>
+                    <td>电源</td>
+                    <td>产品说明</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>PA-120</td>
+                    <td>80Mbps</td>
+                    <td>120</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td>PA-300</td>
+                    <td>100Mbps</td>
+                    <td>300</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td>PA-500</td>
+                    <td>120Mbps</td>
+                    <td>500</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td>PA-1000</td>
+                    <td>300Mbps</td>
+                    <td>1000</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td>PA-1600</td>
+                    <td>600Mbps</td>
+                    <td>1600</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td>PH-3510</td>
+                    <td>130Mbps</td>
+                    <td>400</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                  <tr>
+                    <td>PH-3580</td>
+                    <td>600Mbps</td>
+                    <td>800</td>
+                    <td>6千兆电口</td>
+                    <td>/</td>
+                    <td>单电源</td>
+                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
+                  </tr>
+                </tbody>
+              </table>
+          </section>
   </div>
   <div id="footer"></div>
   <script src="js/jquery-3.2.1.min.js"></script>
@@ -161,6 +411,18 @@
     // 链接
     function linkHtml (link) {
       window.location.href=link
+    }
+    $('#tab').find('#inner0').addClass('tabActive');
+    $('.bottom-table').hide()
+    $('.bottom-table').eq(0).show()
+    var bol = true;
+    var tab = $('#tab').find('li')
+    for (var i = 0; i < tab.length; i++) {
+      tab[i].onclick=function() {
+        $(this).addClass("tabActive").siblings('li').removeClass('tabActive');
+        var index = ($(this).index())
+        $('.bottom-table').eq(index).show().siblings('.bottom-table').hide()
+      }
     }
   </script>
 </body>
