--- a/solution.html
+++ b/solution.html
@@ -27,7 +27,7 @@
           <li class="col-md-3" id="inner0">运营商</li>
           <li class="col-md-3" id="inner1">企业</li>
           <li class="col-md-3" id="inner2">小区</li>
-          <li class="col-md-3" id="inner3">高校</li>
+          <li class="col-md-3" id="inner3">网吧</li>
         </ul>
         <p class="content-container">Panabit专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。处理能力为600Mbps，特别适用于同时在线800人以下的普教客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功能。</p>
       </div>
@@ -156,248 +156,264 @@
         </table>
     </section>
     <section class="outer-section size bottom-table">
-        <h1 class="content-title">企业版规格型号</h1>
-        <table class="table" id="merchant">
-            <thead>
-              <tr>
-                <td>型号</td>
-                <td>吞吐</td>
-                <td>用户规模</td>
-                <td>电口</td>
-                <td>光口</td>
-                <td>电源</td>
-                <td>产品说明</td>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>PA-120</td>
-                <td>80Mbps</td>
-                <td>120</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>PA-300</td>
-                <td>100Mbps</td>
-                <td>300</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>PA-500</td>
-                <td>120Mbps</td>
-                <td>500</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>PA-1000</td>
-                <td>300Mbps</td>
-                <td>1000</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>PA-1600</td>
-                <td>600Mbps</td>
-                <td>1600</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>PH-3510</td>
-                <td>130Mbps</td>
-                <td>400</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>PH-3580</td>
-                <td>600Mbps</td>
-                <td>800</td>
-                <td>6千兆电口</td>
-                <td>/</td>
-                <td>单电源</td>
-                <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
-              </tr>
-            </tbody>
-          </table>
-      </section>
-      <section class="outer-section size bottom-table">
-          <h1 class="content-title">小区版规格型号</h1>
-          <table class="table" id="merchant">
-              <thead>
-                <tr>
-                  <td>型号</td>
-                  <td>吞吐</td>
-                  <td>用户规模</td>
-                  <td>电口</td>
-                  <td>光口</td>
-                  <td>电源</td>
-                  <td>产品说明</td>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>PA-120</td>
-                  <td>80Mbps</td>
-                  <td>120</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
-                </tr>
-                <tr>
-                  <td>PA-300</td>
-                  <td>100Mbps</td>
-                  <td>300</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
-                </tr>
-                <tr>
-                  <td>PA-500</td>
-                  <td>120Mbps</td>
-                  <td>500</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
-                </tr>
-                <tr>
-                  <td>PA-1000</td>
-                  <td>300Mbps</td>
-                  <td>1000</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
-                </tr>
-                <tr>
-                  <td>PA-1600</td>
-                  <td>600Mbps</td>
-                  <td>1600</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
-                </tr>
-                <tr>
-                  <td>PH-3510</td>
-                  <td>130Mbps</td>
-                  <td>400</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
-                </tr>
-                <tr>
-                  <td>PH-3580</td>
-                  <td>600Mbps</td>
-                  <td>800</td>
-                  <td>6千兆电口</td>
-                  <td>/</td>
-                  <td>单电源</td>
-                  <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
-                </tr>
-              </tbody>
-            </table>
-        </section>
-        <section class="outer-section size bottom-table">
-            <h1 class="content-title">高校版规格型号</h1>
-            <table class="table" id="merchant">
-                <thead>
-                  <tr>
-                    <td>型号</td>
-                    <td>吞吐</td>
-                    <td>用户规模</td>
-                    <td>电口</td>
-                    <td>光口</td>
-                    <td>电源</td>
-                    <td>产品说明</td>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>PA-120</td>
-                    <td>80Mbps</td>
-                    <td>120</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td>PA-300</td>
-                    <td>100Mbps</td>
-                    <td>300</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td>PA-500</td>
-                    <td>120Mbps</td>
-                    <td>500</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td>PA-1000</td>
-                    <td>300Mbps</td>
-                    <td>1000</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td>PA-1600</td>
-                    <td>600Mbps</td>
-                    <td>1600</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td>PH-3510</td>
-                    <td>130Mbps</td>
-                    <td>400</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td>PH-3580</td>
-                    <td>600Mbps</td>
-                    <td>800</td>
-                    <td>6千兆电口</td>
-                    <td>/</td>
-                    <td>单电源</td>
-                    <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
-                  </tr>
-                </tbody>
-              </table>
-          </section>
+      <h1 class="content-title">企业版规格型号</h1>
+      <table class="table" id="merchant">
+          <thead>
+            <tr>
+              <td>型号</td>
+              <td>吞吐</td>
+              <td>用户规模</td>
+              <td>电口</td>
+              <td>光口</td>
+              <td>电源</td>
+              <td>产品说明</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>PA-120</td>
+              <td>80Mbps</td>
+              <td>120</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-120.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PA-300</td>
+              <td>100Mbps</td>
+              <td>300</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-300.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PA-500</td>
+              <td>120Mbps</td>
+              <td>500</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-500.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PA-1000</td>
+              <td>300Mbps</td>
+              <td>1000</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PA-1600</td>
+              <td>600Mbps</td>
+              <td>1600</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PA-1600.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PH-3510</td>
+              <td>130Mbps</td>
+              <td>400</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3510.docx')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PH-3580</td>
+              <td>600Mbps</td>
+              <td>800</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PH-3580.docx')"><img src="img/file.png" alt=""></td>
+            </tr>
+          </tbody>
+        </table>
+    </section>
+    <section class="outer-section size bottom-table">
+      <h1 class="content-title">小区版规格型号</h1>
+      <table class="table" id="merchant">
+          <thead>
+            <tr>
+              <td>型号</td>
+              <td>用户规模</td>
+              <td>并发会话数</td>
+              <td>电源</td>
+              <td>产品说明</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>PN-80</td>
+              <td>80</td>
+              <td>20000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-80.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-120</td>
+              <td>120</td>
+              <td>25000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-120.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-160</td>
+              <td>160</td>
+              <td>30000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-160.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-200</td>
+              <td>200</td>
+              <td>40000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-200.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-300</td>
+              <td>300</td>
+              <td>55000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-300.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-400</td>
+              <td>400</td>
+              <td>70000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-400.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-500</td>
+              <td>500</td>
+              <td>85000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-500.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-650</td>
+              <td>650</td>
+              <td>120000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-650.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-800</td>
+              <td>800</td>
+              <td>140000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-800.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-1000</td>
+              <td>1000</td>
+              <td>160000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-1000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-1500</td>
+              <td>1500</td>
+              <td>210000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-1500.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-2000</td>
+              <td>2000</td>
+              <td>260000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-2000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-2500</td>
+              <td>2500</td>
+              <td>320000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-2500.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-3000</td>
+              <td>3000</td>
+              <td>370000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-3000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-3500</td>
+              <td>3500</td>
+              <td>420000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-3500.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-4000</td>
+              <td>4000</td>
+              <td>470000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-4000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-4500</td>
+              <td>4500</td>
+              <td>520000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-4500.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PN-5000</td>
+              <td>5000</td>
+              <td>570000</td>
+              <td>单电源</td>
+              <td onclick="linkHtml('http://www.panabit.com/uploads/doc/PN-5000.pdf')"><img src="img/file.png" alt=""></td>
+            </tr>
+          </tbody>
+        </table>
+    </section>
+    <section class="outer-section size bottom-table">
+      <h1 class="content-title">网吧版规格型号</h1>
+      <table class="table" id="merchant">
+        <thead>
+          <tr>
+            <td>型号</td>
+            <td>吞吐</td>
+            <td>用户规模</td>
+            <td>电口</td>
+            <td>光口</td>
+            <td>电源</td>
+            <td>产品说明</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>PX1</td>
+            <td>120Mbps</td>
+            <td>500</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+          <tr>
+            <td>PX5</td>
+            <td>300Mbps</td>
+            <td>1000</td>
+            <td>6千兆电口</td>
+            <td>/</td>
+            <td>单电源</td>
+            <td><img src="img/file.png" alt=""></td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </div>
   <div id="footer"></div>
   <script src="js/jquery-3.2.1.min.js"></script>
